# structured-pdf-parser

./: .gitignore  Dockerfile  IP_PROTECTION_SUMMARY.md  QUICKSTART.md  README.md  debug_pipeline.py  demo_extraction.py  final_comparison.py  final_comparison_proper.py  final_proper_pipeline.py  improved_pipeline.py  llm_usage_explanation.py  parsing_flow_diagram.py  parsing_mechanics_explanation.py  proper_output_formatter.py  requirements.txt  run_full_pipeline.py  test_pipeline.py  test_simple_pipeline.py  view_results.py
config/: pipeline.yaml
core/: Cargo.toml  README.md  config_manager.py  setup.py
core/engine/: extractor.rs
core/licensing/: manager.rs
core/security/: validator.rs
core/src/: lib.rs
core/src/engine/: extractor.rs
core/src/licensing/: manager.rs
core/src/security/: validator.rs
docs/: evaluation_report.md  security.md
protected_core/: Cargo.toml  README.md  build_payload.py  integrate_with_pipeline.py  setup.py  test_protected_core.py
protected_core/src/: lib.rs
src/: __init__.py  agent.py  config.py  data_structurer.py  download_models.py  llm_processor.py  main.py  nlp_processor.py  pdf_parser.py  pdf_processor.py  pipeline.py
src/nlp/: extractor.py
tests/: test_extractor.py
