[package]
name = "ml_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ml_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
