[package]
name = "codex_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
cryptography = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
zeroize = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
